@@ -6,6 +6,7 @@
   * Allow receiving of gzip-compressed data
   * Removed more unnecessary code due to dropped support of servers below 1.5.3
   * Wrote new Connector with new JSON-parser "GSON" from google (included in Android since API-lvl 11)
+  * Fixed some problems with the counters for Fresh/Starred/Published articles
 
 == Version 1.06 ==
   * Removed support for server-versions lower then 1.5.3
